hphp/test/slow/goto/try_goto_out_finally.php.expectf
Fatal error: Goto to a label outside a finally block is not supported in %s/test/slow/goto/try_goto_out_finally.php on line 2
